<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".crear_tarea">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/nueva_tarea"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginTop="51dp"
            android:text="@string/nombre"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/alerta"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/nombre"
            app:layout_constraintTop_toBottomOf="@+id/nombre" />

        <EditText
            android:id="@+id/alerta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fecha"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/select_fecha"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:text="@string/horario"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/select_horario"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="72dp"
            android:text="@string/btn_cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:text="@string/btn_crear"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_cancelar"
            app:layout_constraintStart_toEndOf="@+id/btn_cancelar" />

        <Button
            android:id="@+id/select_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="1dp"
            android:text="@string/btn_selecciona"
            app:layout_constraintEnd_toEndOf="@+id/alerta"
            app:layout_constraintTop_toBottomOf="@+id/alerta" />

        <Button
            android:id="@+id/select_horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/btn_selecciona"
            app:layout_constraintStart_toStartOf="@+id/select_fecha"
            app:layout_constraintTop_toBottomOf="@+id/select_fecha" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>