<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/tareas"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/historial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:onClick="to_history"
        android:text="@string/btn_historial"
        app:layout_constraintBaseline_toBaselineOf="@+id/logros"
        app:layout_constraintEnd_toStartOf="@+id/logros"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="101dp"
        android:onClick="to_achievments"
        android:text="@string/btn_logros"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/progreso"
        app:layout_constraintStart_toEndOf="@+id/historial" />

    <Button
        android:id="@+id/progreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="101dp"
        android:onClick="to_progress"
        android:text="@string/btn_progreso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logros" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nuevatarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="69dp"
        android:clickable="true"
        android:onClick="new_task"
        app:layout_constraintBottom_toTopOf="@+id/progreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <FrameLayout
        android:id="@+id/fragmentos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="292dp">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>